--- a/index.html
+++ b/index.html
@@ -16,9 +16,17 @@
 </head>
 
 <body>
-
-  
-     
+  <nav>
+    <div class="nav-container">
+      <h1>Fun Bus</h1>
+      <div class="links">
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+      </div>
+    </div>
+  </nav>
   <div class="container home">
     <header>
       <img src="img/fun-bus.jpg">
